--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,48 @@ header {
     -ms-background-size: cover;
     background-size: cover;
 }
+/*********************************************************************/
+/* Style the video: 100% width and height to cover the entire window */
+#myVideo {
+    /*position: fixed;*/
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+	object-fit: fill;
+}
+
+/* Add some content at the bottom of the video/page */
+.content {
+    position:sticky;
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+}
+
+/* Style the button used to pause/play the video */
+#myBtn {
+    width: 200px;
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+}
+
+#myBtn:hover {
+    background: #ddd;
+    color: black;
+}
+
+
+/*******************************************************************/
 
 .agile_banner.bg2 {
     background: url(../images/bg2.jpg) center no-repeat;
